force-app/main/default/objects/Dataverse_Contact_Request__c/Dataverse_Contact_Request__c.object-meta.xml
<CustomObject>
    <description>Represents a request from the AGSC Microsoft Dataverse environment to insert or update a contact</description>
    <label>Dataverse Contact Request</label>
    <nameField>
        <displayFormat>DCR-{00000}</displayFormat>
        <label>Dataverse Contact Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dataverse Contact Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>