force-app/main/default/objects/Dataverse_Contact_Request__c/fields/Age_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Age_Group_ID__c</fullName>
    <label>Age Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>