force-app/main/default/objects/Dataverse_Contact_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dataverse Contact Requests</relationshipLabel>
    <relationshipName>Dataverse_Contact_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>