force-app/main/default/objects/Dataverse_Contact_Request__c/fields/Eligible_for_Training_Pathway__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Training_Pathway__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the player is eligible for the upcoming Training Pathway program. Updates the Team Eligibility field on the associated player&apos;s contact.</description>
    <inlineHelpText>Indicates that the player is eligible for the upcoming Training Pathway program. Updates the Team Eligibility field on the associated player&apos;s contact.</inlineHelpText>
    <label>Eligible for Training Pathway</label>
    <type>Checkbox</type>
</CustomField>