force-app/main/default/objects/Dataverse_Contact_Request__c/fields/Player_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Player_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>Player Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>