force-app/main/default/objects/Dataverse_Contact_Request__c/fields/Player_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Player_Middle_Name__c</fullName>
    <label>Player Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>