force-app/main/default/objects/Dataverse_Contact_Request__c/fields/Player_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Player_Nickname__c</fullName>
    <label>Player Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>