force-app/main/default/objects/Dataverse_Contact_Request__c/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <externalId>true</externalId>
    <label>Program ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>