force-app/main/default/objects/Dataverse_Contact_Request__c/fields/Salesforce_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>Salesforce Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>