force-app/main/default/objects/Dataverse_Contact_Request__c/fields/Tryout_ID__c.field-meta.xml
<CustomField>
    <fullName>Tryout_ID__c</fullName>
    <externalId>true</externalId>
    <label>Tryout ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>