force-app/main/default/objects/Dataverse_Contact_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Player_Nickname__c</columns>
    <columns>Program_ID__c</columns>
    <columns>Tryout_ID__c</columns>
    <columns>Parent_Guardian_First_Name__c</columns>
    <columns>Parent_Guardian_Last_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>